--- a/tomcat/configure/conf/logging.properties
+++ b/tomcat/configure/conf/logging.properties
@@ -22,7 +22,7 @@ handlers = 1catalina.org.apache.juli.AsyncFileHandler, java.util.logging.Console
 # Describes specific configuration info for Handlers.
 ############################################################
 1catalina.org.apache.juli.AsyncFileHandler.level = FINE
-1catalina.org.apache.juli.AsyncFileHandler.directory = ${catalina.base}/logs
+1catalina.org.apache.juli.AsyncFileHandler.directory = ${log.base}
 1catalina.org.apache.juli.AsyncFileHandler.prefix = catalina.
 1catalina.org.apache.juli.AsyncFileHandler = org.apache.juli.OneLineFormatter
 
