--- a/elk/logstash-shipper-tomcat/configure/02_filter_tomcat.conf
+++ b/elk/logstash-shipper-tomcat/configure/02_filter_tomcat.conf
@@ -22,7 +22,7 @@ filter {
 	if "tomcat" in [tags] {
 		grok {
 			patterns_dir => "/etc/logstash/patterns"
-			match => {path => '/logs/tomcat/%{WORDDASH:tomcatInstance}/.*'}
+			match => {path => '/logs/tomcat/%{WORDDASH:tomcat_instance}/.*'}
 		}
 	}
 }
