--- a/elk/logstash-shipper-tomcat/configure/11_output_elasticsearch.conf
+++ b/elk/logstash-shipper-tomcat/configure/11_output_elasticsearch.conf
@@ -1,7 +1,7 @@
 output {
 	elasticsearch {
 		protocol => "http"
-		host => "%ES_HOST%"
-		port => "%ES_PORT%"
+		host => "es"
+		port => "9200"
 	}
 }
